@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003-2004 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-spvr.in,v 1.14 2004/02/23 08:34:51 ko1 Exp $
+;; $Id: kahua-spvr.in,v 1.15 2004/02/23 11:20:58 ko1 Exp $
 
 ;; For clients, this server works as a receptionist of kahua system.
 ;; It opens a socket where initial clients will connect.
@@ -345,7 +345,7 @@
 	      #f)))))
 
 (define-method ping-activate ((spvr <kahua-spvr>) (worker <kahua-worker>))
-  (letrec 
+  (let*
       ((selector (selector-of spvr))
        (sock #f)
        (in   #f)
@@ -355,32 +355,32 @@
 	       (set! (ref worker 'ping-last-time) (sys-time))
 	       (receive-message fd)
 	       (ping-deactivate worker)
-	       ; (log-worker-action "ping respond" worker)
+			   ; (log-worker-action "ping respond" worker)
 	       ))
 
        (reset-sock
 	(lambda ()
-	  (with-error-handler
-	   (lambda (w)
-	     ;; to be restart
-	     (set! (ref worker 'ping-last-time) 0)
-	     (set! (ref worker 'ping-responded) #f))
-	   (lambda ()
-	     (worker-type-of worker)
-	     (set! sock (make-client-socket
-			 (worker-id->sockaddr (worker-id-of worker)
-					      (ref spvr 'sockbase))))
-	     (set! in   (socket-input-port sock))
-	     (set! out  (socket-output-port sock))
-	     (selector-add!  (selector-of spvr) in proc '(r))
-	    )))))
+	  (worker-type-of worker)
+	  (set! sock (make-client-socket
+		      (worker-id->sockaddr (worker-id-of worker)
+					   (ref spvr 'sockbase))))
+	  (set! in   (socket-input-port sock))
+	  (set! out  (socket-output-port sock))
+	  (selector-add!  (selector-of spvr) in proc '(r))
+	  )))
 
     (set! (ref worker 'pinger)
 	  (lambda ()
-	    (reset-sock)
-	    (set! (ref worker 'ping-responded) #f)
-	    (send-message out 
-			  `(("x-kahua-ping" ,(worker-id-of worker))) '())))
+	    (with-error-handler
+	     (lambda (e)
+	       ;; to be restart
+	       (set! (ref worker 'ping-last-time) 0)
+	       (set! (ref worker 'ping-responded) #f))
+	     (lambda ()
+	       (reset-sock)
+	       (set! (ref worker 'ping-responded) #f)
+	       (send-message out `(("x-kahua-ping" ,(worker-id-of worker)))
+			     '())))))
     (set! (ref worker 'ping-deactivator)
 	  (lambda () 
 	    (selector-delete! selector in proc #f)
